--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>academy.devonline</groupId>
-    <artifactId>TODO</artifactId>
+    <artifactId>TIC_TAC_TOE</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>TODO</name>
-    <description>TODO</description>
+    <name>TIC_TAC_TOE</name>
+    <description>TIC_TAC_TOE GAME</description>
     <url>http://devonline.academy/java</url>
     <organization>
         <name>DevOnline Academy</name>
