Add destribution with jre

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
                     <descriptors>
                         <descriptor>src/assembly/distribution-windows.xml</descriptor>
                         <descriptor>src/assembly/distribution-unix.xml</descriptor>
+
+                        <descriptor>src/assembly/distribution-windows-with-jre.xml</descriptor>
+                        <descriptor>src/assembly/distribution-mac-with-jre.xml</descriptor>
+                        <descriptor>src/assembly/distribution-linux-with-jre.xml</descriptor>
+
                     </descriptors>
                 </configuration>
                 <executions>
