--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,13 @@
         <maven-project-info-reports-plugin.version>3.1.2</maven-project-info-reports-plugin.version>
 
         <!-- Maven additional plugins -->
+
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-assembly-plugin -->
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-antrun-plugin -->
+        <maven-antrun-plugin.version>3.0.0</maven-antrun-plugin.version>
+
     </properties>
 
     <build>
@@ -120,11 +126,6 @@
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>${maven-project-info-reports-plugin.version}</version>
                 </plugin>
-
-                <!--   <plugin>
-                       <artifactId>maven-assembly-plugin</artifactId>
-                       <version>${maven-assembly-plugin.version}</version>
-                   </plugin>-->
             </plugins>
         </pluginManagement>
     </build>
@@ -157,10 +158,33 @@
                 </plugins>
             </build>
         </profile>
+
+
         <profile>
             <id>with-jre</id>
             <build>
                 <plugins>
+
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>${maven-antrun-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <configuration>
+                                    <target>
+                                        <ant antfile="${project.basedir}/build-jre.xml">
+                                            <target name="build-jre"/>
+                                        </ant>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
                     <plugin>
                         <artifactId>maven-assembly-plugin</artifactId>
                         <version>${maven-assembly-plugin.version}</version>
