--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>academy.devonline</groupId>
     <artifactId>tic-tac-toe</artifactId>
-    <version>1.0</version>
+    <version>2.0-SNAPSHOT</version>
 
     <name>Tic Tac Toe</name>
     <description>The Tic-Tac-Toe simple game using console mode</description>
