--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2019. http://devonline.main.java.devonline.academy
+# Copyright (c) 2019. http://devonline.devonline.academy
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
