--- a/proguard-rules.conf
+++ b/proguard-rules.conf
@@ -5,5 +5,13 @@
 -keepclasseswithmembers public class * {
     public static void main(java.lang.String[]);
 }
+-keepclassmembers class academy.devonline.tictactoe.model.PlayerType {
+   *;
+}
+
+#-keepclassmembers class * extends java.lang.Enum {
+#   *;
+#}
+
 
 -repackageclasses 'a'
