--- a/proguard-rules.conf
+++ b/proguard-rules.conf
@@ -5,13 +5,11 @@
 -keepclasseswithmembers public class * {
     public static void main(java.lang.String[]);
 }
--keepclassmembers class academy.devonline.tictactoe.model.PlayerType {
+-keepclassmembers enum academy.devonline.tictactoe.model.config.* {
    *;
 }
 
--keepclassmembers class academy.devonline.tictactoe.model.UserInterface {
-   *;
-}
+
 
 #-keepclassmembers class * extends java.lang.Enum {
 #   *;
